# PivBO

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  DEVELOPER_README.md  Dockerfile  LICENSE  README.md  docker-compose.yml  docker-entrypoint.sh  momentum_trading_simulator.html  momentum_trading_simulator_server.py  pivbo.html  pivbo_server.py  pyproject.toml  requirements-server.txt  requirements.txt
.github/workflows/: container.yml  pages.yml  release.yml
collected_stocks/: AAL.csv  AAMRQ.csv  AAOI.csv  AAP.csv  AAPL.csv  ABK.csv  ABVX.csv  ABX.csv  ACAD.csv  ACB.csv  ACF.csv  ACH.csv  ACHR.csv  ACLS.csv  ACLX.csv  ACMR.csv  ADD.csv  ADSK.csv  ADYX.csv  AEIS.csv  AEM.csv  AEO.csv  AFL.csv  AFRM.csv  AG.csv  AGU.csv  AGX.csv  AHT.csv  AI.csv  AIG.csv  AKAM.csv  ALAB.csv  ALF.csv  ALGM.csv  ALGN.csv  ALMS.csv  ALNY.csv  ALU.csv  AMBA.csv  AMC.csv  (+671 more)
pivbo/: __init__.py  __main__.py  collected_stocks_manifest.txt  launcher.py  pivbo.html
scripts/: pin_version.py
web/: CNAME  index.html  release.js  styles.css
